chore(rss): configure production deployment
